--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.col {
+  height: 100vh !important
+}
+
+.logo {
+  font-family: 'VT323', monospace;
+  letter-spacing: .14em;
+  font-size: 4rem;
+}
