--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,19 +13,33 @@ code {
 }
 
 main {
-  height: 100% !important
+  height: 100% !important;
+}
+
+button {
+  width: 15vh !important;
+  height: 15vh !important;
+  bottom: 8vh;
 }
 
 .logo {
   font-family: 'VT323', monospace;
   letter-spacing: .14em;
-  font-size: 4rem;
+  font-size: 5rem !important;
 }
 
-button {
-  width: 20vh !important;
-  height: 20vh !important;
-  bottom: 8vh;
+#play {
+  font-size: 12vh;
+  line-height: 1.1;
 }
 
-.material-icons.md-24 { font-size: 48px; }
+#FAB {
+  position: relative;
+  left: 10vw;
+  z-index: 997;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+#search {
+  height: 90vh;
+}
