--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,25 +17,53 @@ main {
 }
 
 button {
-  width: 15vh !important;
-  height: 15vh !important;
-  bottom: 8vh;
+  width: 12vw !important;
+  height: 12vw !important;
+}
+
+#pad button {
+  width: 20vw !important;
+  height: 20vw !important;
+  box-shadow: inset 0px 1px 9px 6px rgba(0, 0, 0, 0.25) !important;
 }
 
 .logo {
   font-family: 'VT323', monospace;
   letter-spacing: .14em;
-  font-size: 5rem !important;
+  font-size: 6rem !important;
+}
+
+@media (min-width: 960px) {
+  #pad {
+  transform: rotate(40deg);
+  }
+
+  #pad h5 {
+    transform: rotate(-40deg);
+  }
+}
+
+#pad {
+  position: relative;
+  top: 20vh;
+}
+
+#pad h5 {
+  position: relative;
+  left: 10vw;
+  bottom: 20vw;
+  z-index: 500;
 }
 
 #play {
-  font-size: 12vh;
+  font-size: 10vh;
   line-height: 1.1;
+  padding: 0 !important;
 }
 
-#FAB {
+#modal1 {
   position: relative;
-  left: 10vw;
+  left: 45vw;
   z-index: 997;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
