--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,16 +21,41 @@ button {
   height: 12vw !important;
 }
 
+p {
+  font-size: 1.2rem;
+}
+
 #pad button {
   width: 20vw !important;
   height: 20vw !important;
   box-shadow: inset 0px 1px 9px 6px rgba(0, 0, 0, 0.25) !important;
 }
 
+.content {
+  min-height: 20vh;
+  padding: 0 5vmin !important;
+}
+
+.content img {
+  width: 15vmin;
+  border: 1px solid #ddd;
+  margin: 2vmin;
+}
+
 .logo {
   font-family: 'VT323', monospace;
   letter-spacing: .14em;
   font-size: 6rem !important;
+}
+
+.profile {
+  position: relative;
+  right: 3vw;
+  top: 15vh;
+  height: 6vmax;
+  border-radius: 500px;
+  object-fit: cover;
+  aspect-ratio: 1;
 }
 
 @media (min-width: 960px) {
