--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,12 +32,6 @@ p {
 
 }
 
-#pad button {
-  width: 20vw !important;
-  height: 20vw !important;
-  box-shadow: inset 0px 1px 9px 6px rgba(0, 0, 0, 0.25) !important;
-}
-
 .content {
   min-height: 20vh;
   padding: 0 5vmin !important;
@@ -72,12 +66,14 @@ p {
 .modal {
   overflow: visible !important;
   border-radius: 25% !important;
+  max-width: 70vw;
 }
 
 .modal-btn {
   height: 10vh !important;
   width: 10vh !important;
   position: fixed;
+  /* scale: auto; */
   left: 75vw;
   top: 5vh;
   z-index: 997;
@@ -96,14 +92,32 @@ p {
 
 #pad {
   position: relative;
-  top: 20vh;
+  /* max-width: 50vw; */
+  margin-top: 10vh;
 }
 
 #pad h5 {
   position: relative;
-  left: 10vw;
-  bottom: 20vw;
+  font-size: 8vw;
+  left: 5vw;
+  bottom: 15vw;
   z-index: 500;
+}
+
+#pad h5 {
+  color: black;
+  font-size: 4vmax !important;
+}
+
+#pad a:hover {
+  color: inherit;
+  text-decoration: underline;
+}
+
+#pad button {
+  width: 10vw !important;
+  height: 10vw !important;
+  box-shadow: inset 0px 1px 9px 6px rgba(0, 0, 0, 0.25) !important;
 }
 
 #play {
