--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,11 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  overflow: clip;
 }
 
 main {
@@ -30,6 +26,16 @@ article {
 p {
   font-size: 1.2rem;
 
+}
+
+.cart {
+  border-radius: 15%;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.code {
+  font-family: "VT323",
+    monospace;
 }
 
 .content {
@@ -59,10 +65,6 @@ p {
   aspect-ratio: 1;
 }
 
-.row {
-  margin: 0 !important;
-}
-
 .modal {
   overflow: visible !important;
   border-radius: 25% !important;
@@ -78,6 +80,15 @@ p {
   top: 5vh;
   z-index: 997;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.row {
+  margin: 0 !important;
+}
+
+.sell {
+  position: relative;
+  bottom: 1vw;
 }
 
 @media (min-width: 380px) {
@@ -121,11 +132,11 @@ p {
 }
 
 #play {
-  font-size: 10vh;
+  font-size: 7vh;
   line-height: 1.1;
   padding: 0 !important;
 }
 
 #search {
-  height: 90vh;
+  height: 100vh;
 }
