--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,7 +25,6 @@ article {
 
 p {
   font-size: 1.2rem;
-
 }
 
 .cart {
@@ -34,20 +33,19 @@ p {
 }
 
 .code {
-  font-family: "VT323",
-    monospace;
+  font-family: "VT323", monospace;
 }
 
-.content {
+/* .content {
   min-height: 20vh;
   padding: 0 5vmin !important;
-}
+} */
 
-.content img {
+/* .content img {
   width: 15vmin;
   border: 1px solid #ddd;
   margin: 2vmin;
-}
+} */
 
 .logo {
   font-family: "VT323", monospace;
@@ -55,14 +53,9 @@ p {
   font-size: 6rem !important;
 }
 
-.profile {
-  position: relative;
-  right: 3vw;
-  top: 15vh;
-  height: 6vmax;
-  border-radius: 500px;
-  object-fit: cover;
-  aspect-ratio: 1;
+.feed {
+  height: 6000px;
+  overflow: auto;
 }
 
 .modal {
@@ -77,7 +70,7 @@ p {
   position: fixed;
   /* scale: auto; */
   left: 75vw;
-  top: 5vh;
+  top: 0vh;
   z-index: 997;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
@@ -86,10 +79,10 @@ p {
   margin: 0 !important;
 }
 
-.sell {
+/* .sell {
   position: relative;
   bottom: 1vw;
-}
+} */
 
 @media (min-width: 380px) {
   #pad {
